FIX missing colors for code highlight

--- a/source/_static/css/code.css
+++ b/source/_static/css/code.css
@@ -13,7 +13,9 @@ div.highlight {
 
 .highlight .nt,
 .highlight .nv,
-.highlight .nb {
+.highlight .nb,
+.highlight .gh,
+.highlight .k {
   color: var(--code-primary);
 }
 
